--- a/quiz-cookie-geneator-db-dto/pom.xml
+++ b/quiz-cookie-geneator-db-dto/pom.xml
@@ -23,7 +23,6 @@
             <optional>true</optional>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -37,7 +36,7 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
     </dependencies>
@@ -50,12 +49,20 @@
                 <artifactId>jsonschema2pojo-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
+                    <generateBuilders>true</generateBuilders>
                     <sourceDirectory>${project.basedir}/src/main/resources/dto</sourceDirectory>
-                    <outputDirectory>${basedir}/src/main/java/com/home/quizserver/dto</outputDirectory>
+                    <outputDirectory>${basedir}/src/main/java</outputDirectory>
+                    <serializable>true</serializable>
+                    <sourceType>jsonschema</sourceType>
+                    <targetPackage>ru.quiz.generator.dto</targetPackage>
                 </configuration>
-                <goals>
-                    <goal>generate</goal>
-                </goals>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
