--- a/quiz-cookie-generator-app/pom.xml
+++ b/quiz-cookie-generator-app/pom.xml
@@ -46,14 +46,15 @@
             </dependency>
 
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-jpa</artifactId>
-            </dependency>
-
-            <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>ru.quiz</groupId>
+                <artifactId>quiz-cookie-generator-bd-dto</artifactId>
+                <version>1.0.0</version>
+                <scope>compile</scope>
             </dependency>
 
         </dependencies>
