Поменял на jdbcTemplate

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>quiz-cookie-generator-app</module>
+        <module>quiz-cookie-geneator-db-dto</module>
     </modules>
 
     <properties>
@@ -27,7 +28,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
                 <version>2.7.14</version>
             </dependency>
 
