буду делить на 2 типа кук, сессионная и игровая, игровая для двух игроков, сессионная для авторизации одного игрока

--- a/quiz-cookie-geneator-db-dto/pom.xml
+++ b/quiz-cookie-geneator-db-dto/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>org.jsonschema2pojo</groupId>
             <artifactId>jsonschema2pojo-maven-plugin</artifactId>
+            <version>1.2.1</version>
         </dependency>
 
         <dependency>
@@ -56,6 +57,7 @@
                     <sourceType>jsonschema</sourceType>
                     <targetPackage>ru.quiz.generator.dto</targetPackage>
                     <useLongIntegers>true</useLongIntegers>
+                    <includeJsr305Annotations>true</includeJsr305Annotations>
                 </configuration>
                 <executions>
                     <execution>
