--- a/quiz-cookie-generator-app/pom.xml
+++ b/quiz-cookie-generator-app/pom.xml
@@ -60,6 +60,16 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1</version>
+    </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.29</version>
+        </dependency>
 
     </dependencies>
 
